// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsAddAlertChannelDialog > renders correctly if email channel is selected 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="New: Channel"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          class="px-1"
          data-v-17725b48=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <selection-input-stub
            checkbox="true"
            coloractiveprepend="false"
            data-v-17725b48=""
            disabled="false"
            disabledvalues=""
            emittoggleall="false"
            emptyequalsallselected="false"
            error="false"
            filled="true"
            groupidkey="id"
            groups=""
            groupsorderby="name"
            hiddenitemscount="0"
            hidesearch="true"
            hint="Type"
            inverted="false"
            isgroupedselect="false"
            issingleselect="true"
            itemflag=""
            itemgroupidkey="groupId"
            items="[object Object],[object Object]"
            itemsecondarytext=""
            itemtertiarytext=""
            itemtext="name"
            itemvalue="id"
            loading="false"
            menuinputclass="mb-2 mx-1"
            menuinputtype="primary"
            modelvalue=""
            numericorderby="false"
            placeholder="Type"
            prependtext=""
            removenonexistentselections="false"
            required="true"
            showemptyarrayasallselected="false"
            someselected="false"
            totalcount="0"
            usechips="false"
          />
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <v-spacer-stub
        data-v-17725b48=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-17725b48=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-17725b48=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAddAlertChannelDialog > renders correctly if webhook channel is selected 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="New: Channel"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          class="px-1"
          data-v-17725b48=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <selection-input-stub
            checkbox="true"
            coloractiveprepend="false"
            data-v-17725b48=""
            disabled="false"
            disabledvalues=""
            emittoggleall="false"
            emptyequalsallselected="false"
            error="false"
            filled="true"
            groupidkey="id"
            groups=""
            groupsorderby="name"
            hiddenitemscount="0"
            hidesearch="true"
            hint="Type"
            inverted="false"
            isgroupedselect="false"
            issingleselect="true"
            itemflag=""
            itemgroupidkey="groupId"
            items="[object Object],[object Object]"
            itemsecondarytext=""
            itemtertiarytext=""
            itemtext="name"
            itemvalue="id"
            loading="false"
            menuinputclass="mb-2 mx-1"
            menuinputtype="primary"
            modelvalue=""
            numericorderby="false"
            placeholder="Type"
            prependtext=""
            removenonexistentselections="false"
            required="true"
            showemptyarrayasallselected="false"
            someselected="false"
            totalcount="0"
            usechips="false"
          />
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <v-spacer-stub
        data-v-17725b48=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-17725b48=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-17725b48=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAddAlertChannelDialog > renders correctly when channel is not selected 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="New: Channel"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          class="px-1"
          data-v-17725b48=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <selection-input-stub
            checkbox="true"
            coloractiveprepend="false"
            data-v-17725b48=""
            disabled="false"
            disabledvalues=""
            emittoggleall="false"
            emptyequalsallselected="false"
            error="false"
            filled="true"
            groupidkey="id"
            groups=""
            groupsorderby="name"
            hiddenitemscount="0"
            hidesearch="true"
            hint="Type"
            inverted="false"
            isgroupedselect="false"
            issingleselect="true"
            itemflag=""
            itemgroupidkey="groupId"
            items="[object Object],[object Object]"
            itemsecondarytext=""
            itemtertiarytext=""
            itemtext="name"
            itemvalue="id"
            loading="false"
            menuinputclass="mb-2 mx-1"
            menuinputtype="primary"
            modelvalue=""
            numericorderby="false"
            placeholder="Type"
            prependtext=""
            removenonexistentselections="false"
            required="true"
            showemptyarrayasallselected="false"
            someselected="false"
            totalcount="0"
            usechips="false"
          />
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <v-spacer-stub
        data-v-17725b48=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-17725b48=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-17725b48=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsAddAlertChannelDialog > renders correctly when channel is not selected, but email channel is not available 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="New: Channel"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          class="px-1"
          data-v-17725b48=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <selection-input-stub
            checkbox="true"
            coloractiveprepend="false"
            data-v-17725b48=""
            disabled="true"
            disabledvalues=""
            emittoggleall="false"
            emptyequalsallselected="false"
            error="false"
            filled="true"
            groupidkey="id"
            groups=""
            groupsorderby="name"
            hiddenitemscount="0"
            hidesearch="true"
            hint="Type"
            inverted="false"
            isgroupedselect="false"
            issingleselect="true"
            itemflag=""
            itemgroupidkey="groupId"
            items="[object Object]"
            itemsecondarytext=""
            itemtertiarytext=""
            itemtext="name"
            itemvalue="id"
            loading="false"
            menuinputclass="mb-2 mx-1"
            menuinputtype="primary"
            modelvalue=""
            numericorderby="false"
            placeholder="Type"
            prependtext=""
            removenonexistentselections="false"
            required="true"
            showemptyarrayasallselected="false"
            someselected="false"
            totalcount="0"
            usechips="false"
          />
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <v-spacer-stub
        data-v-17725b48=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-17725b48=""
        icon=""
        iconcolor=""
        id="cancel-button"
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-17725b48=""
        icon=""
        iconcolor=""
        id="save-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;
